CMDB-1608 - UIDesigner generated pages should mask the the whole page until rendering finished
git-svn-id: http://www.ifountain.org/repos/os/RapidModules@7794 a08bcbf9-5f6c-4d33-af0a-e494bc2cacca

--- a/RapidInsight/web-app/riindex.css
+++ b/RapidInsight/web-app/riindex.css
@@ -116,4 +116,10 @@
     width: 80px;
 }
 
+.yui-skin-sam .mask {
+    background-color: #DAE8FB;
+    opacity: 1;
+    filter: alpha( opacity = 100 )
+}
+
 
