time range selector component implementation
git-svn-id: http://www.ifountain.org/repos/os/RapidModules@8007 a08bcbf9-5f6c-4d33-af0a-e494bc2cacca

--- a/RapidUiPlugin/web-app/css/rapidjs/search/search.css
+++ b/RapidUiPlugin/web-app/css/rapidjs/search/search.css
@@ -46,3 +46,11 @@
 .rcmdb-search-exporttool{
    background-image:url(../../../images/rapidjs/component/tools/table_go.png)
 }
+
+.rcmdb-search-time-range-selector{
+    width: 100%;
+    height: 100px;
+}
+.rcmdb-search-sub-component{
+
+}
