CMDB-1653 - Implement Netcool Mobile UI
git-svn-id: http://www.ifountain.org/repos/os/RapidModules@8019 a08bcbf9-5f6c-4d33-af0a-e494bc2cacca

--- a/RapidUiPlugin/web-app/css/mobile/iui.css
+++ b/RapidUiPlugin/web-app/css/mobile/iui.css
@@ -400,7 +400,7 @@ fieldset > .row:last-child {
 }
 .itable th              { background: url(../../images/mobile/blue_hd_bg.png) top left repeat-x; border-right: 1px solid gray; }
 .itable th:last-child   { border-right: none; }
-.itable td              { border-right: 1px solid gray;}
+.itable td              { border-right: 1px solid gray;font-size:12px}
 .itable tr:first-child  { white-space: nowrap; }
 .itable tr:last-child   { border-right: none; }
 
