--- a/RapidUiPlugin/web-app/css/mobile/iui.css
+++ b/RapidUiPlugin/web-app/css/mobile/iui.css
@@ -48,11 +48,27 @@ body > .toolbar {
     -webkit-box-sizing: border-box;
     border-bottom: 1px solid #2d3642;
     border-top: 1px solid #6d84a2;
-    padding: 10px;
+    padding: 7px 10px;
     height: 45px;
     background: url(../../images/mobile/toolbar.png) #6d84a2 repeat-x;
 }
-
+.toolbar ul {
+    display:block;
+    margin:0;
+    padding:0;
+}
+.leftButtons{
+    float:left;
+}
+.rightButtons{
+    float:right;
+}
+.leftButtons li{
+    display: inline;
+}
+.rightButtons li{
+    display: inline;
+}
 .toolbar > h1 {
     position: absolute;
     overflow: hidden;
@@ -75,13 +91,10 @@ body[orient="landscape"] > .toolbar > h1 {
 }
 
 .button {
-    position: absolute;
     overflow: hidden;
-    top: 8px;
-    right: 6px;
     margin: 0;
     border-width: 0 5px;
-    padding: 0 3px;
+    padding: 8px 0;
     width: auto;
     height: 30px;
     line-height: 30px;
@@ -109,12 +122,13 @@ body[orient="landscape"] > .toolbar > h1 {
 
 #backButton {
     display: none;
-    left: 6px;
-    right: auto;
-    padding: 0;
     max-width: 55px;
     border-width: 0 8px 0 14px;
     -webkit-border-image: url(../../images/mobile/backButton.png) 0 8 0 14;
+}
+#refreshButton {
+    background: url(../../images/mobile/rotate-right.png) no-repeat center;
+    text-decoration:none;
 }
 
 .whiteButton,
@@ -431,9 +445,9 @@ th a:link, th a:visited, th a:hover {
     border-style:none solid solid;
     border-width:0 1px 1px;
     color:#666666;
-    font-size:10px;
+    font-size:16px;
     overflow:hidden;
-    padding:7px 3px;
+    padding:4px 3px;
 }
 
 .paginateButtons a {
