git-svn-id: http://www.ifountain.org/repos/os/RapidModules@8044 a08bcbf9-5f6c-4d33-af0a-e494bc2cacca

--- a/RapidUiPlugin/web-app/css/mobile/iui.css
+++ b/RapidUiPlugin/web-app/css/mobile/iui.css
@@ -417,6 +417,7 @@ fieldset > .row:last-child {
 .itable td              { border-right: 1px solid gray;font-size:12px}
 .itable tr:first-child  { white-space: nowrap; }
 .itable tr:last-child   { border-right: none; }
+.itable ul{padding:0; list-style:none}
 
 .a_table {
 	text-decoration:none
