git-svn-id: http://www.ifountain.org/repos/os/RapidModules@8067 a08bcbf9-5f6c-4d33-af0a-e494bc2cacca

--- a/RapidInsight/web-app/riindex.css
+++ b/RapidInsight/web-app/riindex.css
@@ -116,6 +116,13 @@
     width: 80px;
 }
 
+.ri-object-details a{
+    color:#006DBA;
+    cursor:pointer;
+    display:block;
+    text-decoration:underline;
+}
+
 .yui-skin-sam .mask {
     background-color: #DAE8FB;
     opacity: 1;
