CMDB-1730 - uidesigner wizard mechanism
git-svn-id: http://www.ifountain.org/repos/os/RapidModules@8377 a08bcbf9-5f6c-4d33-af0a-e494bc2cacca

--- a/RapidUiPlugin/web-app/css/rapidjs/common.css
+++ b/RapidUiPlugin/web-app/css/rapidjs/common.css
@@ -34,7 +34,7 @@
 
 .rapid-context-menu-text {
     text-align: justify;
-    font-family: Arial, Tahoma, Verdana, Helvetica;
+    font-family: Tahoma, Verdana, Helvetica;
     font-size: 11px;
     line-height: 20px;
     text-indent: 30px;
@@ -135,7 +135,7 @@
 }
 
 td, textarea, input, div, span, a, a:visited, a:hover, a:active, select {
-    font-family: Arial, Tahoma, Verdana, Helvetica;
+    font-family: Tahoma, Verdana, Helvetica;
     font-size: 11px;
 }
 
