--- a/RapidInsight/web-app/riindex.css
+++ b/RapidInsight/web-app/riindex.css
@@ -123,10 +123,10 @@
     text-decoration:underline;
 }
 
-.yui-skin-sam .mask {
-    background-color: #DAE8FB;
-    opacity: 1;
-    filter: alpha( opacity = 100 )
+.r-loadingmask-mask {
+    background-color: #DAE8FB !important;
+    opacity: 1 !important;
+    filter: alpha( opacity = 100 ) !important;
 }
 
 .apgWrapperBox {
