add logviewer to ross
git-svn-id: http://www.ifountain.org/repos/os/RapidModules@8436 a08bcbf9-5f6c-4d33-af0a-e494bc2cacca

--- a/RapidUiPlugin/web-app/css/rapidjs/logViewer/logManager.css
+++ b/RapidUiPlugin/web-app/css/rapidjs/logViewer/logManager.css
@@ -15,6 +15,14 @@
 {
     padding-left:10px;
 }
+.log-clear-tool
+{
+    background-image:url("../../../images/rapidjs/component/logViewer/eraser.png")    
+}
+.log-reload-tool
+{
+    background-image:url("../../../images/rapidjs/component/logViewer/page_white_swoosh.png")    
+}
 .logViewerLastNLines
 {
     width:40px;
