logviewer line count setting
git-svn-id: http://www.ifountain.org/repos/os/RapidModules@8444 a08bcbf9-5f6c-4d33-af0a-e494bc2cacca

--- a/RapidUiPlugin/web-app/css/rapidjs/logViewer/logManager.css
+++ b/RapidUiPlugin/web-app/css/rapidjs/logViewer/logManager.css
@@ -5,7 +5,11 @@
 }
 .logViewerLastNLinesBtn
 {
-    
+    white-space:nowrap;
+}
+.logViewerLineCountBtn
+{
+    white-space:nowrap;
 }
 .logViewerHeader
 {
@@ -24,6 +28,11 @@
     background-image:url("../../../images/rapidjs/component/logViewer/page_white_swoosh.png")    
 }
 .logViewerLastNLines
+{
+    width:40px;
+    height:20px;
+}
+.logViewerLineCount
 {
     width:40px;
     height:20px;
