CMDB-1749 - SearchGrid should support multiple selection menus
git-svn-id: http://www.ifountain.org/repos/os/RapidModules@8455 a08bcbf9-5f6c-4d33-af0a-e494bc2cacca

--- a/RapidUiPlugin/web-app/css/rapidjs/search/search.css
+++ b/RapidUiPlugin/web-app/css/rapidjs/search/search.css
@@ -54,3 +54,7 @@
 .rcmdb-search-sub-component{
 
 }
+.rcmdb-search-rowselected {
+    background-color: #DDDDFF !important;
+    color: black !important;
+}
