CMDB-1759 - Mobile UI Notifications tab implementation
git-svn-id: http://www.ifountain.org/repos/os/RapidModules@8492 a08bcbf9-5f6c-4d33-af0a-e494bc2cacca

--- a/RapidUiPlugin/web-app/css/mobile/simple.css
+++ b/RapidUiPlugin/web-app/css/mobile/simple.css
@@ -242,3 +242,8 @@ th a:link, th a:visited, th a:hover {
     margin-right: 5px;
     text-decoration:none;
 }
+
+.notifications li a{
+    background:none;
+    text-decoration:underline;
+}
