--- a/RapidUiPlugin/web-app/css/mobile/iui.css
+++ b/RapidUiPlugin/web-app/css/mobile/iui.css
@@ -264,7 +264,7 @@ body > .panel {
     background: #c8c8c8 url(../../images/mobile/pinstripes.png);
 }
 
-.panel > fieldset {
+.panel fieldset {
     position: relative;
     margin: 0 0 20px 0;
     padding: 0;
@@ -288,7 +288,7 @@ fieldset > .row:last-child {
     border-bottom: none !important;
 }
 
-.row > input:not(input[type|=radio]):not(input[type|=checkbox]) {
+.row > input:not(input[type|=radio]):not(input[type|=checkbox]){
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -297,6 +297,13 @@ fieldset > .row:last-child {
     padding: 12px 10px 0 110px;
     height: 42px;
     background: none;
+}
+.row > select{
+   box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    margin: 8px 0 0px 0px;
+    padding: 2px;
 }
 .row > input[type|=radio], .row > input[type|=checkbox] {
   margin: 7px 7px 0 0;
@@ -626,7 +633,7 @@ th a:link, th a:visited, th a:hover {
     float:left;
     padding:6 14;
     text-decoration:none;
-    
+
 }
 .ri-mobile-tab .selected a{
    background-color:#B5C1CF;
