--- a/RapidInsight/web-app/riindex.css
+++ b/RapidInsight/web-app/riindex.css
@@ -165,3 +165,39 @@
     background-color: inherit !important;
 }
 
+form input, textarea, select {
+    margin: 2px 0pt;
+    padding: 2px 4px;
+    font-family: verdana, arial, helvetica, sans-serif;
+    font-size: 11px;
+    font-size-adjust: none;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: normal;
+    line-height: normal;
+}
+
+form .prop .name {
+    text-align: left;
+    white-space: nowrap;
+    width: 15%;
+    line-height: 12px;
+    padding: 5px 6px;
+    text-align: left;
+    vertical-align: top;
+}
+
+form .prop .value {
+    text-align: left;
+    width: 85%;
+    line-height: 12px;
+    padding: 5px 6px;
+    text-align: left;
+    vertical-align: top;
+}
+
+form select {
+    padding: 2px 2px 2px 0pt;
+}
+
