git-svn-id: http://www.ifountain.org/repos/os/RapidModules@8830 a08bcbf9-5f6c-4d33-af0a-e494bc2cacca

--- a/RapidInsight/web-app/riindex.css
+++ b/RapidInsight/web-app/riindex.css
@@ -122,6 +122,13 @@
     display: block;
     text-decoration: underline;
 }
+.ri-object-details .errors{
+    background: #fff3f3;
+    border: 1px solid red;
+    color: #cc0000;
+    margin: 10px 0 5px 0;
+    padding: 5px 0 5px 15px;
+}
 
 .r-loadingmask-mask {
     background-color: #DAE8FB !important;
