git-svn-id: http://www.ifountain.org/repos/os/RapidModules@9059 a08bcbf9-5f6c-4d33-af0a-e494bc2cacca

--- a/RapidInsight/web-app/riindex.css
+++ b/RapidInsight/web-app/riindex.css
@@ -10,6 +10,13 @@
     background: transparent url( images/rapidjs/sprite-png.png ) no-repeat scroll 0pt -59px;
 }
 
+.r-toolbar-addButton {
+    color: #083772;
+    line-height:14px;
+    font-weight: bold;
+    background: transparent url( images/rapidjs/component/tools/add.png ) no-repeat scroll left;
+}
+
 .r-tree-firstCell {
     cursor: pointer;
 }
@@ -122,7 +129,8 @@
     display: block;
     text-decoration: underline;
 }
-.ri-object-details .errors{
+
+.ri-object-details .errors {
     background: #fff3f3;
     border: 1px solid red;
     color: #cc0000;
